--- a/index.html
+++ b/index.html
@@ -32,22 +32,21 @@
                 <div class="w-11/12  bg-white rounded-lg">
                     <!-- task time set -->
                     <div class="border-dashed border-slate-400 border-b-1">
-                        <div class="flex justify-between p-4">
+                        <div class="flex justify-between gap-3 p-4">
                             <div class="flex items-center gap-5 bg-green-200 rounded-lg px-5">
                                 <img src="image/checkbox.png" alt="">
                                 <p>Task Assigned <br>
                                 <span class="font-bold">06</span></p>
                             </div>
                             <div class="flex items-center gap-5
-                            px-24 py-3 bg-sky-800 rounded-lg">
+                            px-15 py-3 bg-sky-800 rounded-lg">
                                 <img src="image/board.png" alt="">
                                 <p class="text-white text-lg">Discover Something  
                                     <span>New Today!</span></p>
                             </div>
                             <div class="flex items-center gap-5 bg-green-200 rounded-lg px-5">
                                 <img src="image/calender.png" alt="">
-                                <p>Wed,  <br>
-                                    <span>Jul 28 2024</span></p>
+                                <p id="date" class="font-bold "></p>
                             </div>
                         </div>
                     </div>
@@ -55,14 +54,14 @@
                     mt-4">
                         <div class="bg-lime-100 p-3 rounded-lg">
                             <button class="btn bg-white rounded-lg font-bold text-slate-400 py-3">Shop Ease</button>
-                            <h3 class="text-lg text-gray-700 font-bold py-2">Fix Mobile Button Issue</h3>
+                            <h3 id="fix-mobile" class="text-lg text-gray-700 font-bold py-2">Fix Mobile Button Issue</h3>
                             <p class="text-sm p-3 bg-white rounded-lg text-gray-400 mb-3">A card component has a figure, a body part and inside body there are title and actions parts</p>
                             <div class="flex justify-between items-center">
                                 <div class="">
                                     <p class="text-gray-500 font-semibold text-sm">Deadline</p>
                                     <p class="text-gray-500 font-semibold text-sm">21 March 2025</p>
                                 </div>
-                                <button class="btn bg-blue-800 px-2 py-1 text-white font-bold">Completed</button>
+                                <button id="completed-btn" class="btn bg-blue-800 px-2 py-1 text-white font-bold">Completed</button>
                             </div>
                         </div>
                         <div class="bg-lime-100 p-3 rounded-lg">
@@ -137,6 +136,7 @@
                         <div class="text-center">
                             <button class="btn bg-blue-700 text-white font-bold">Clear History</button>
                         </div>
+                        <div class="active-container"></div>
                     </div>
                 </div>
              </section>
