active history add

--- a/index.html
+++ b/index.html
@@ -136,8 +136,9 @@
                         <div class="text-center">
                             <button class="btn bg-blue-700 text-white font-bold">Clear History</button>
                         </div>
-                        <div class="active-container"></div>
+                        
                     </div>
+                    <div id="active-container" class="px-2"></div>
                 </div>
              </section>
             
