compleate button add

--- a/index.html
+++ b/index.html
@@ -66,62 +66,62 @@
                         </div>
                         <div class="bg-lime-100 p-3 rounded-lg">
                             <button class="btn bg-white rounded-lg font-bold text-slate-400 py-3">Soft Pay</button>
-                            <h3 class="text-lg text-gray-700 font-bold py-2">Add Pay Success Modal</h3>
+                            <h3 id="add-pay" class="text-lg text-gray-700 font-bold py-2">Add Pay Success Modal</h3>
                             <p class="text-sm p-3 bg-white rounded-lg text-gray-400 mb-3">A card component has a figure, a body part and inside body there are title and actions parts</p>
                             <div class="flex justify-between items-center">
                                 <div class="">
                                     <p class="text-gray-500 font-semibold text-sm">Deadline</p>
                                     <p class="text-gray-500 font-semibold text-sm">25 March 2025</p>
                                 </div>
-                                <button class="btn bg-blue-800 px-2 py-1 text-white font-bold">Completed</button>
+                                <button id="completed-btn1" class="btn bg-blue-800 px-2 py-1 text-white font-bold">Completed</button>
                             </div>
                         </div>
                         <div class="bg-lime-100 p-3 rounded-lg">
                             <button class="btn bg-white rounded-lg font-bold text-slate-400 py-3">Meta</button>
-                            <h3 class="text-lg text-gray-700 font-bold py-2">Add new reaction</h3>
+                            <h3 id="add-reaction" class="text-lg text-gray-700 font-bold py-2">Add new reaction</h3>
                             <p class="text-sm p-3 bg-white rounded-lg text-gray-400 mb-3">A card component has a figure, a body part and inside body there are title and actions parts</p>
                             <div class="flex justify-between items-center">
                                 <div class="">
                                     <p class="text-gray-500 font-semibold text-sm">Deadline</p>
                                     <p class="text-gray-500 font-semibold text-sm">31 March 2025</p>
                                 </div>
-                                <button class="btn bg-blue-800 px-2 py-1 text-white font-bold">Completed</button>
+                                <button id="completed-btn2" class="btn bg-blue-800 px-2 py-1 text-white font-bold">Completed</button>
                             </div>
                         </div>
                         <div class="bg-lime-100 p-3 rounded-lg">
                             <button class="btn bg-white rounded-lg font-bold text-slate-400 py-3">Programming Hero</button>
-                            <h3 class="text-lg text-gray-700 font-bold py-2">Fix Video Loading Issue</h3>
+                            <h3 id="fix-video" class="text-lg text-gray-700 font-bold py-2">Fix Video Loading Issue</h3>
                             <p class="text-sm p-3 bg-white rounded-lg text-gray-400 mb-3">A card component has a figure, a body part and inside body there are title and actions parts</p>
                             <div class="flex justify-between items-center">
                                 <div class="">
                                     <p class="text-gray-500 font-semibold text-sm">Deadline</p>
                                     <p class="text-gray-500 font-semibold text-sm">21 March 2025</p>
                                 </div>
-                                <button class="btn bg-blue-800 px-2 py-1 text-white font-bold">Completed</button>
+                                <button id="completed-btn3" class="btn bg-blue-800 px-2 py-1 text-white font-bold">Completed</button>
                             </div>
                         </div>
                         <div class="bg-lime-100 p-3 rounded-lg">
                             <button class="btn bg-white rounded-lg font-bold text-slate-400 py-3">Google LLC</button>
-                            <h3 class="text-lg text-gray-700 font-bold py-2">Integrate AI Search </h3>
+                            <h3 id="integrate-ai" class="text-lg text-gray-700 font-bold py-2">Integrate AI Search </h3>
                             <p class="text-sm p-3 bg-white rounded-lg text-gray-400 mb-3">A card component has a figure, a body part and inside body there are title and actions parts</p>
                             <div class="flex justify-between items-center">
                                 <div class="">
                                     <p class="text-gray-500 font-semibold text-sm">Deadline</p>
                                     <p class="text-gray-500 font-semibold text-sm">1 April 2025</p>
                                 </div>
-                                <button class="btn bg-blue-800 px-2 py-1 text-white font-bold">Completed</button>
+                                <button id="completed-btn4" class="btn bg-blue-800 px-2 py-1 text-white font-bold">Completed</button>
                             </div>
                         </div>
                         <div class="bg-lime-100 p-3 rounded-lg">
                             <button class="btn bg-white rounded-lg font-bold text-slate-400 py-3">Polygon Tech</button>
-                            <h3 class="text-lg text-gray-700 font-bold py-2">Review AMI Probashi Site</h3>
+                            <h3 id="ami-probashi" class="text-lg text-gray-700 font-bold py-2">Review AMI Probashi Site</h3>
                             <p class="text-sm p-3 bg-white rounded-lg text-gray-400 mb-3">A card component has a figure, a body part and inside body there are title and actions parts</p>
                             <div class="flex justify-between items-center">
                                 <div class="">
                                     <p class="text-gray-500 font-semibold text-sm">Deadline</p>
                                     <p class="text-gray-500 font-semibold text-sm">21 March 2025</p>
                                 </div>
-                                <button class="btn bg-blue-800 px-2 py-1 text-white font-bold">Completed</button>
+                                <button id="completed-btn5" class="btn bg-blue-800 px-2 py-1 text-white font-bold">Completed</button>
                             </div>
                         </div>
                     </div>
@@ -134,7 +134,7 @@
                         <span class="font-semibold text-lg">Activity Log</span> <br>
                         </div>
                         <div class="text-center">
-                            <button class="btn bg-blue-700 text-white font-bold">Clear History</button>
+                            <button id="clear-btn" class="btn bg-blue-700 text-white font-bold">Clear History</button>
                         </div>
                         
                     </div>
@@ -147,5 +147,6 @@
 
 
     <script src="script/main.js"></script>
+    <script src="script/button.js"></script>
 </body>
 </html>
