--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="flex items-center gap-4">
                     <button class="flex gap-2 btn rounded-lg">
                         <img src="image/checkbox.png" alt="Check">
-                        <span class="text-lg font-bold">23</span>
+                        <span id="add-task" class="text-lg font-bold">23</span>
                     </button>
                     <div class="">
                         <a href="#"><img id="theme-change" src="image/theme-btn.png" alt="theme change"></a>
@@ -36,7 +36,7 @@
                             <div class="flex items-center gap-5 bg-green-200 rounded-lg px-5">
                                 <img src="image/checkbox.png" alt="">
                                 <p>Task Assigned <br>
-                                <span class="font-bold">06</span></p>
+                                <span id="task" class="font-bold">6</span></p>
                             </div>
                             <div class="flex items-center gap-5
                             px-15 py-3 bg-sky-800 rounded-lg">
@@ -61,7 +61,7 @@
                                     <p class="text-gray-500 font-semibold text-sm">Deadline</p>
                                     <p class="text-gray-500 font-semibold text-sm">21 March 2025</p>
                                 </div>
-                                <button id="completed-btn" class="btn bg-blue-800 px-2 py-1 text-white font-bold">Completed</button>
+                                <button  id="completed-btn" class="btn bg-blue-800 px-2 py-1 text-white font-bold">Completed</button>
                             </div>
                         </div>
                         <div class="bg-lime-100 p-3 rounded-lg">
@@ -148,5 +148,6 @@
 
     <script src="script/main.js"></script>
     <script src="script/button.js"></script>
+    <script src="script/task.js"></script>
 </body>
 </html>
