--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section >
         <section class="max-w-screen-xl mx-auto pt-4">
             <!-- header section -->
-            <header class="flex justify-between px-5 py-4 bg-white rounded-lg mb-5">
+            <header class="flex justify-between items-center px-5 py-4 bg-white rounded-lg mb-5">
                 <div class="flex gap-3 items-center">
                     <img src="image/logo.png" alt="Logo">
                     <h1 class="text-3xl">Dev<span class="font-bold text-black">Board</span></h1>
@@ -38,8 +38,8 @@
                                 <p>Task Assigned <br>
                                 <span id="task" class="font-bold">6</span></p>
                             </div>
-                            <div class="flex items-center gap-5
-                            px-15 py-3 bg-sky-800 rounded-lg">
+                            <div id="blogs" class="flex items-center gap-5
+                            px-15 py-3 bg-sky-800 rounded-lg cursor-pointer">
                                 <img src="image/board.png" alt="">
                                 <p class="text-white text-lg">Discover Something  
                                     <span>New Today!</span></p>
