--- a/blogs/index.html
+++ b/blogs/index.html
@@ -22,23 +22,31 @@
             <h1 class="text-center text-2xl font-bold text-gray-700 mb-4">Blogs</h1>
             <div class="p-3 bg-white rounded-xl mb-4">
                 <h1 class="font-bold text-xl text-gray-700 pb-2">Question-1: What are the different ways to select an element in the DOM?</h1>
-                <p class="pb-4 text-slate-700 font-semibold">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum earum facere rem magni odit animi beatae harum fugiat modi quo, ad voluptates blanditiis quos repudiandae ipsa quas quasi quia? Harum.</p>
+                <p class="pb-4 text-slate-700 font-semibold">
+                    The different ways to select an element in the DOM are : .getElementsByClassName('demo'), .getElementById('demo'), .getElementsByTagName('demo'), .querySelector('demo'), .querySelectorAll().
+                </p>
             </div>
             <div class="p-3 bg-white rounded-xl mb-4">
                 <h1 class="font-bold text-xl text-gray-700 pb-2"> Question-2: What is the difference between innerHTML, innerText, and textContent ?</h1>
-                <p class="pb-4 text-slate-700 font-semibold">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum earum facere rem magni odit animi beatae harum fugiat modi quo, ad voluptates blanditiis quos repudiandae ipsa quas quasi quia? Harum.</p>
+                <p class="pb-4 text-slate-700 font-semibold">
+                    innerHTML : This tag is used to insert a new tag.
+                    innerContent : innerContent is used to insert only raw text inside an element. It returns the raw text content as a string.
+                    innerText : This property focuses on the rendered text content.
+                </p>
             </div>
             <div class="p-3 bg-white rounded-xl mb-4">
                 <h1 class="font-bold text-xl text-gray-700 pb-2">Question-3: What is event delegation in the DOM?</h1>
-                <p class="pb-4 text-slate-700 font-semibold">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum earum facere rem magni odit animi beatae harum fugiat modi quo, ad voluptates blanditiis quos repudiandae ipsa quas quasi quia? Harum.</p>
+                <p class="pb-4 text-slate-700 font-semibold">Event delegation is the process of handling child events through a parent event.</p>
             </div>
             <div class="p-3 bg-white rounded-xl mb-4">
                 <h1 class="font-bold text-xl text-gray-700 pb-2">Question-4: What is event bubbling in the DOM?</h1>
-                <p class="pb-4 text-slate-700 font-semibold">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum earum facere rem magni odit animi beatae harum fugiat modi quo, ad voluptates blanditiis quos repudiandae ipsa quas quasi quia? Harum.</p>
+                <p class="pb-4 text-slate-700 font-semibold">Event bubbling is the propagation of an event that stops at its origin and goes up to the root element.</p>
             </div>
             <div class="p-3 bg-white rounded-xl mb-4">
                 <h1 class="font-bold text-xl text-gray-700 pb-2">Question-5: How do you create, add, and remove elements using JavaScript?</h1>
-                <p class="pb-4 text-slate-700 font-semibold">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum earum facere rem magni odit animi beatae harum fugiat modi quo, ad voluptates blanditiis quos repudiandae ipsa quas quasi quia? Harum.</p>
+                <p class="pb-4 text-slate-700 font-semibold">
+                    create : .createElement('demo')    remove : .remove() 
+                </p>
             </div>
         </section>
     </section>
